2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/DebugCommands.cs, MonoDevelop.Ide.addin.xml:
	  Added new breakpoint commands.
	* MonoDevelop.Ide.Debugging/DebuggingService.cs,
	  MonoDevelop.Ide.Gui.Dialogs/BreakpointPropertiesDialog.cs,
	  MonoDevelop.Ide.mdp,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.BreakpointPropertiesDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am: Moved breakpoint properties dialog
	  from the debugger add-in. More stuff likely to come here.

2008-08-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Worked on dom.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added some missing icons to commands.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fix some warnings. Add
	  ActiveThread property.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs,
	  MonoDevelop.Ide.mdp, gtk-gui/objects.xml: Updated.
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Don't crash MD if there is
	  an exception in the go to dialog.
	* MonoDevelop.Ide.Gui/Document.cs: Request file edit permission when
	  saving a document.

2008-08-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: worked on refactory
	  commands.

2008-08-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Changed parser
	  interface.

2008-07-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Escape < so it doesn't get
	  handled as GMarkup. Incomplete, but enough for now.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: removed documentation dep.

2008-07-29  Mike Krüger <mkrueger@novell.com> 
